<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/no_person_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:context="com.zybooks.sdsuccc.PersonActivity">

        <TextView
            android:id="@+id/no_person_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_person"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_person_button" />

        <Button
            android:id="@+id/add_person_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_person"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/show_person_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context="com.zybooks.sdsuccc.PersonActivity">

        <TextView
            android:id="@+id/person_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_label"
            style="@style/PersonLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/person_text_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="30sp"
            tools:text="person"
            app:layout_constraintTop_toTopOf="@id/person_label_text_view"
            app:layout_constraintBottom_toTopOf="@+id/info_button"
            app:layout_constraintLeft_toRightOf="@id/person_label_text_view"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/hide_information"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/info_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_label"
            style="@style/PersonLabel"
            app:layout_constraintTop_toBottomOf="@+id/info_button"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/info_text_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="30sp"
            tools:text="information"
            app:layout_constraintTop_toTopOf="@id/info_label_text_view"
            app:layout_constraintLeft_toRightOf="@id/info_label_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>